# gol2p

./: CMakeLists.txt  README.md  index.html  index.js  index.wasm
.github/workflows/: cmake-multi-platform.yml  wasm.yml
src/: CMakeLists.txt  gol.cpp  template.html
